--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
               <span>2005 — 2020</span>
 
               <p class="timeline-text">
-                Established in 1962 it is a female school affiloated to the International Baccalaureate (IB) ,Council for Indian School Certificate 
+                Established in 1962 it is a female school affiliated to the International Baccalaureate (IB) ,Council for Indian School Certificate 
                 Examinations (CISCE) ,Cambridge Assessment International Education (CAIE). 
               </p>
 
