--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
                 Examinations (CISCE) ,Cambridge Assessment International Education (CAIE). 
               </p>
 
-            </li>
+            </li>Ff
 
             <li class="timeline-item">
 
@@ -996,7 +996,20 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">App Development (Flutter and FireBase) </h5>
+                <h5 class="h5">Flutter  </h5>
+                <data value="50">60%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 60%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">FireBase</h5>
                 <data value="50">60%</data>
               </div>
 
@@ -1044,6 +1057,9 @@
               </div>
 
             </li>
+
+           
+
 
           </ul>
 
